correct bg img loc

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <!------------------------navbar------------------------------>
 
 <!---------------------------hero section-------------------------------------->
-<section id="home" style="background-image: url(/crew/bg3.png); background-repeat: no-repeat;background-size: 100% auto;">
+<section id="home" style="background-image: url(/assets/bg.png); background-repeat: no-repeat;background-size: 100% auto;">
     <div class="pt-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
         <img src="assets/logo-black-no-decrip.png" class="h-auto max-w-lg mx-auto rounded-full w-40" alt="Flowbite Logo"/>
         
