--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
 <footer class="bg-white dark:bg-gray-900">
     <div class="px-4 py-6 bg-gray-100 dark:bg-gray-700 items-center">
-        <div class="flex mt-4 space-x-6 sm:justify-center md:mt-0">
+        <div class="flex mt-4 space-x-6 sm:justify-center">
             <span class="text-sm text-gray-500 dark:text-gray-300 sm:text-center">&copy;2023 Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by IIC NSSCE 5.0</span>
         </div>
     </div>
