--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <!------------------------navbar------------------------------>
 <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900">
-  <div class="container flex flex-wrap items-center justify-between mx-auto">
+  <div class="container flex flex-wrap items-center justify-end mx-auto">
   <div class="flex md:order-2">
       <button type="button" class="text-white bg-green-400 hover:bg-green-400 focus:ring-4 focus:outline-none focus:ring-green-400 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-green-400 dark:hover:bg-green-400 dark:focus:ring-green-400"><a href="https://chat.whatsapp.com/HDmgTh71BJcGp5CrqoW4AQ" target=”_blank”> <i class="fa-brands fa-whatsapp"></i>  Join the team</a></button>
       <button data-collapse-toggle="navbar-cta" type="button" class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-cta" aria-expanded="false">
