--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
 <!------------------------navbar------------------------------>
 
 <!---------------------------hero section-------------------------------------->
-<section id="home" style="background-image: url(/assets/bg.png); background-repeat: no-repeat;background-size: 100% auto;">
-    <div class="pt-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
+<section id="home">
+    <!--style="background-image: url(/assets/bg.png); background-repeat: no-repeat;background-size: 100% auto;-->
+    <div class="mb-10 pt-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
         <img src="assets/logo-black-no-decrip.png" class="h-auto max-w-lg mx-auto rounded-full w-40" alt="Flowbite Logo"/>
         
         <h1 class="pt-8 mb-4 text-4xl font-extrabold tracking-tight leading-none text-grey-500 md:text-5xl lg:text-6xl dark:text-white">Institution’s Innovation Council</h1>
@@ -65,30 +66,17 @@
             </figcaption>
         </figure>
     </div>
-    
-    <div class="grid mb-8 border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 md:mb-12 md:grid-cols-1">
-        <figure class="pt-8 max-w-screen-md mx-auto text-center">
-            <svg aria-hidden="true" class="w-12 h-12 mx-auto mb-3 text-gray-700 dark:text-gray-600" viewBox="0 0 24 27" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z" fill="currentColor"/></svg>
-            <blockquote>
-                <p class="text-2xl italic font-medium text-gre-700 dark:text-white">Established an ‘Innovation cell’ with a purpose of systematically
-                    fostering the culture of Innovation in all Higher Education Institutions across the country.</blockquote>
-            <figcaption class="flex items-center justify-center mt-6 space-x-3">
-                <div class="flex items-center divide-x-2 divide-gray-500 dark:divide-gray-700">
-                    <cite class="pb-8 font-medium text-gre-700 dark:text-white">Ministry of Education, Govt. of India</cite>
-                </div>
-            </figcaption>
-        </figure>
-    </div>
-    <hr class="w-48 h-1 mx-auto my-4 bg-gray-100 border-0 rounded md:my-10 dark:bg-gray-700">
 </section>
+
+<hr class="w-48 h-1 mx-auto my-4 bg-gray-100 border-0 rounded md:my-10 dark:bg-gray-700">
 
 <!---------------------------hero section-------------------------------------->
 
 <!---------------------------about section-------------------------------------->
-<section class="bg-white dark:bg-gray-900">
+<section class="my-10 bg-white dark:bg-gray-900">
     <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
         <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400">
-            <h2 class="mb-4 text-4xl tracking-tight font-bold text-gray-900 dark:text-white">About IIC NSSCE</h2>
+            <h2 class="mb-4 text-center text-4xl tracking-tight font-bold text-gray-900 dark:text-white">About IIC NSSCE</h2>
             <p class="mb-4 font-light">
                 Ministry of Education (MOE), Govt. of India has established 'MoE's Innovation Cell (MIC)' to systematically foster the culture of Innovation amongst all Higher Education Institutions (HEIs). The primary mandate of MIC is to encourage, inspire and nurture young students by supporting them to work with new ideas and transform them into prototypes while they are informative years.
                 MIC has envisioned encouraging creation of 'Institution's Innovation Council (IICs)' across selected HEIS. A network of these IICs will be established to promote innovation in the Institution through multitudinous modes leading to an innovation promotion eco- system in the campuses.
@@ -111,6 +99,21 @@
       </div>
   </div>
 </section>
+
+<!-------------------------------quote--------------------------------------->
+<div class="my-10 grid mb-8 border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 md:mb-12 md:grid-cols-1">
+    <figure class="pt-8 max-w-screen-md mx-auto text-center">
+        <svg aria-hidden="true" class="w-12 h-12 mx-auto mb-3 text-gray-700 dark:text-gray-600" viewBox="0 0 24 27" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z" fill="currentColor"/></svg>
+        <blockquote>
+            <p class="text-2xl italic font-medium text-gre-700 dark:text-white">Established an ‘Innovation cell’ with a purpose of systematically
+                fostering the culture of Innovation in all Higher Education Institutions across the country.</blockquote>
+        <figcaption class="flex items-center justify-center mt-6 space-x-3">
+            <div class="flex items-center divide-x-2 divide-gray-500 dark:divide-gray-700">
+                <cite class="pb-8 font-medium text-gre-700 dark:text-white">Ministry of Education, Govt. of India</cite>
+            </div>
+        </figcaption>
+    </figure>
+</div>
 <!---------------------------about section-------------------------------------->
 
 <!------------------------upcoming events------------------------------>            
