--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <section id="team" class="dark:bg-gray-900">
   <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-6">
       <div class="mx-auto mb-8 max-w-screen-sm lg:mb-16">
-          <h2 class="pb-8 mb-4 text-4xl tracking-tight font-extrabold text-red-400 dark:text-white">Meet our Crew!</h2>
+          <h2 class="pb-8 mb-4 text-4xl tracking-tight font-extrabold text-red-400 dark:text-white">Meet our Student Crew!</h2>
           <!-- <p class="font-light text-gray-500 sm:text-xl dark:text-gray-400">Explore the whole collection of open-source web components and elements built with the utility classes from Tailwind</p> -->
       </div> 
         <div class="grid gap-8 lg:gap-16 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
@@ -247,35 +247,35 @@
         <div class="text-center text-gray-500 dark:text-gray-400">
             <img class="mx-auto mb-4 w-36 h-36 rounded-full" src="crew/gopan.jpg" alt="Jese Avatar">
             <h3 class="mb-1 text-2xl font-bold tracking-tight text-grey-400 dark:text-white">
-                <a>Gopan</a>
+                <a>R Gopan</a>
             </h3>
             <p class="pb-4">Innovation Coordinator</p>
         </div>
         <div class="text-center text-gray-500 dark:text-gray-400">
             <img class="mx-auto mb-4 w-36 h-36 rounded-full" src="crew/mj.jpg" alt="Sofia Avatar">
             <h3 class="mb-1 text-2xl font-bold tracking-tight text-grey-400 dark:text-white">
-                <a>Mustafa Jallal</a>
+                <a>Musthafa Jalal</a>
             </h3>
             <p class="pb-4">Innovation Coordinator</p>
         </div>
         <div class="text-center text-gray-500 dark:text-gray-400">
             <img class="mx-auto mb-4 w-36 h-36 rounded-full" src="crew/sreevishak.jpg" alt="Joseph Avatar">
             <h3 class="mb-1 text-2xl font-bold tracking-tight text-grey-400 dark:text-white">
-                <a>Sreevishak</a>
+                <a>J R Sreevisakh</a>
             </h3>
             <p class="pb-4">IPR Coordinator</p>
         </div>
         <div class="text-center text-gray-500 dark:text-gray-400">
             <img class="mx-auto mb-4 w-36 h-36 rounded-full" src="crew/alok.jpg" alt="Joseph Avatar">
             <h3 class="mb-1 text-2xl font-bold tracking-tight text-grey-400 dark:text-white">
-                <a>Alok</a>
+                <a>Alok J S</a>
             </h3>
             <p class="pb-4">Innovation Coordinator</p>
         </div>
         <div class="text-center text-gray-500 dark:text-gray-400">
             <img class="mx-auto mb-4 w-36 h-36 rounded-full" src="crew/riya.jpg" alt="Jese Avatar">
             <h3 class="mb-1 text-2xl font-bold tracking-tight text-grey-400 dark:text-white">
-                <a>Riya</a>
+                <a>Riya S</a>
             </h3>
             <p class="pb-4">StartUp Coordinator</p>
         </div>
@@ -296,28 +296,28 @@
         <div class="text-center text-gray-500 dark:text-gray-400">
             <img class="mx-auto mb-4 w-36 h-36 rounded-full" src="crew/madav.jpg" alt="Michael Avatar">
             <h3 class="mb-1 text-2xl font-bold tracking-tight text-grey-400 dark:text-white">
-                <a>Madhav</a>
+                <a>Madhav H Nair </a>
             </h3>
             <p class="pb-4">IPR Coordinator</p>
         </div>
         <div class="text-center text-gray-500 dark:text-gray-400">
             <img class="mx-auto mb-4 w-36 h-36 rounded-full" src="crew/aswin.jpg" alt="Leslie Avatar">
             <h3 class="mb-1 text-2xl font-bold tracking-tight text-grey-400 dark:text-white">
-                <a>Aswin</a>
+                <a>Ashwin Vijayakumar</a>
             </h3>
             <p class="pb-4">Internship Coordinator</p>
         </div>
         <div class="text-center text-gray-500 dark:text-gray-400">
             <img class="mx-auto mb-4 w-36 h-36 rounded-full" src="crew/midun.jpg" alt="Michael Avatar">
             <h3 class="mb-1 text-2xl font-bold tracking-tight text-grey-400 dark:text-white">
-                <a>Midun</a>
+                <a>Midhun Ramkumar C V</a>
             </h3>
             <p class="pb-4">Social Media Coordinator</p>
         </div> 
         <div class="text-center text-gray-500 dark:text-gray-400">
             <img class="mx-auto mb-4 w-36 h-36 rounded-full" src="crew/pranav.jpg" alt="Leslie Avatar">
             <h3 class="mb-1 text-2xl font-bold tracking-tight text-grey-400 dark:text-white">
-                <a>Pranav</a>
+                <a>Pramod</a>
             </h3>
             <p class="pb-4">Internship Coordinator</p>
         </div> 
