--- a/index.html
+++ b/index.html
@@ -123,9 +123,12 @@
             <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-red-400 dark:text-white">Upcoming Events</h2>
             <p class="font-light text-gray-500 sm:text-xl dark:text-gray-400">Join the events by registering and be a part!</p>
         </div>
-        <div class="grid mb-8 border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 md:mb-12 md:grid-cols-1">
+        <div class="grid mb-8 border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 md:mb-12 md:grid-cols-2">
             <figure class="flex flex-col items-center justify-center p-8 text-center bg-white border-gray-200 rounded-b-lg md:rounded-br-lg dark:bg-gray-800 dark:border-gray-700">
-                <img class="h-auto max-w-lg transition-all duration-300 rounded-lg blur-sm hover:blur-none" src="" alt="No Upcoming Events">
+                <img class="h-auto max-w-lg transition-all duration-300 rounded-lg blur-sm hover:blur-none" src="./events/q2-founders-talk.jpeg" alt="No Upcoming Events">
+            </figure>
+            <figure class="flex flex-col items-center justify-center p-8 text-center bg-white border-gray-200 rounded-b-lg md:rounded-br-lg dark:bg-gray-800 dark:border-gray-700">
+                <img class="h-auto max-w-lg transition-all duration-300 rounded-lg blur-sm hover:blur-none" src="./events/q2-workshop.png" alt="No Upcoming Events">
             </figure>
         </div>
     </div>  
