--- a/index.html
+++ b/index.html
@@ -117,22 +117,17 @@
 <!---------------------------about section-------------------------------------->
 
 <!------------------------upcoming events------------------------------>            
-<section id="events" class="dark:bg-gray-900">
+<!-- <section id="events" class="dark:bg-gray-900">
   <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-6">
         <div class="mx-auto mb-8 max-w-screen-sm lg:mb-16">
             <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-red-400 dark:text-white">Upcoming Events</h2>
             <p class="font-light text-gray-500 sm:text-xl dark:text-gray-400">Join the events by registering and be a part!</p>
         </div>
         <div class="grid mb-8 border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 md:mb-12 md:grid-cols-2">
-            <figure class="flex flex-col items-center justify-center p-8 text-center bg-white border-gray-200 rounded-b-lg md:rounded-br-lg dark:bg-gray-800 dark:border-gray-700">
-                <img class="h-auto max-w-lg transition-all duration-300 rounded-lg blur-sm hover:blur-none" src="./events/q2-founders-talk.jpeg" alt="No Upcoming Events">
-            </figure>
-            <figure class="flex flex-col items-center justify-center p-8 text-center bg-white border-gray-200 rounded-b-lg md:rounded-br-lg dark:bg-gray-800 dark:border-gray-700">
-                <img class="h-auto max-w-lg transition-all duration-300 rounded-lg blur-sm hover:blur-none" src="./events/q2-workshop.png" alt="No Upcoming Events">
-            </figure>
+            
         </div>
     </div>  
-</section>
+</section> -->
 <!------------------------upcoming events------------------------------>            
 
 <!------------------------past events------------------------------>            
@@ -311,9 +306,16 @@
             <p class="pb-4">Internship Coordinator</p>
         </div>
         <div class="text-center text-gray-500 dark:text-gray-400">
-            <img class="mx-auto mb-4 w-36 h-36 rounded-full" src="crew/midun.jpg" alt="Michael Avatar">
+            <img class="mx-auto mb-4 w-36 h-36 rounded-full" src="crew/midhun.png" alt="Michael Avatar">
             <h3 class="mb-1 text-2xl font-bold tracking-tight text-grey-400 dark:text-white">
                 <a>Midhun Ramkumar C V</a>
+            </h3>
+            <p class="pb-4">Social Media Coordinator</p>
+        </div>
+        <div class="text-center text-gray-500 dark:text-gray-400">
+            <img class="mx-auto mb-4 w-36 h-36 rounded-full" src="crew/jinash.jpg" alt="Michael Avatar">
+            <h3 class="mb-1 text-2xl font-bold tracking-tight text-grey-400 dark:text-white">
+                <a>Jinash Ginachandran</a>
             </h3>
             <p class="pb-4">Social Media Coordinator</p>
         </div> 
